table for viewing todo-list

--- a/first.ipynb
+++ b/first.ipynb
@@ -293,13 +293,13 @@
     }
    ],
    "source": [
-    "def find_task_id():\n",
+    "def search_task_id():\n",
     "    with open(TODO, 'r') as file:\n",
     "        lines = file.readlines()\n",
     "        for line in lines:\n",
     "            print(line.strip())\n",
     "\n",
-    "find_task_id()"
+    "search_task_id()"
    ]
   },
   {
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "def find_task_id():\n",
+    "def search_task_id():\n",
     "    num = int(input)\n",
     "    with open(TODO, 'r') as file:\n",
     "        lines = file.readlines()\n",
@@ -329,27 +329,16 @@
     "            if line.startswith(\"Task ID:\"+str(num)):\n",
     "                return line.strip()\n",
     "\n",
-    "find_task_id()"
+    "search_task_id()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Task ID:2 second'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def find_task_id():\n",
+    "def search_task_id():\n",
     "    num = int(input(\"Enter Task Number: \"))\n",
     "    with open(TODO, 'r') as file:\n",
     "        lines = file.readlines()\n",
@@ -357,7 +346,196 @@
     "            if line.startswith(\"Task ID:\"+str(num)):\n",
     "                return line.strip()\n",
     "\n",
-    "find_task_id()"
+    "search_task_id()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def search_task_id():\n",
+    "    num = int(input(\"Enter Task Number: \"))\n",
+    "    with open(TODO, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        for line in lines:\n",
+    "            if line.startswith(\"Task ID:\"+str(num)):\n",
+    "                task_id =num+1\n",
+    "                return task_id\n",
+    "\n",
+    "search_task_id()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "add_task() missing 1 required positional argument: 'task_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[71], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtask added.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     17\u001b[0m search_task_id()\n\u001b[1;32m---> 18\u001b[0m \u001b[43madd_task\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: add_task() missing 1 required positional argument: 'task_id'"
+     ]
+    }
+   ],
+   "source": [
+    "todo = 'TODO.txt'\n",
+    "def search_task_id():\n",
+    "    num = int(input(\"Enter Task Number: \"))\n",
+    "    with open(todo, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        for line in lines:\n",
+    "            if line.startswith(\"Task ID:\"+str(num)):\n",
+    "                task_id =num+1\n",
+    "                return task_id\n",
+    "            \n",
+    "\n",
+    "\n",
+    "def add_task(task_id):\n",
+    "    with open(todo,'a') as file:\n",
+    "        file.write(\"Task ID:\"+str(task_id)+\" \"+\"fourth\"+'\\n')\n",
+    "    print('task added.')\n",
+    "search_task_id()\n",
+    "add_task()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '2 second\\n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[76], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m         file\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(task_id)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfourth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtask added.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 19\u001b[0m \u001b[43madd_task\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[76], line 15\u001b[0m, in \u001b[0;36madd_task\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_task\u001b[39m():\n\u001b[1;32m---> 15\u001b[0m     task_id \u001b[38;5;241m=\u001b[39m \u001b[43msearch_task_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(todo,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     17\u001b[0m         file\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(task_id)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfourth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[76], line 8\u001b[0m, in \u001b[0;36msearch_task_id\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m line\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(num)):\n\u001b[1;32m----> 8\u001b[0m         current_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m      9\u001b[0m         highest_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(highest_id, current_id)  \n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m highest_id\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '2 second\\n'"
+     ]
+    }
+   ],
+   "source": [
+    "todo = 'TODO.txt'\n",
+    "def search_task_id():\n",
+    "    num = int(input(\"Enter Task Number: \"))\n",
+    "    with open(todo, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        for line in lines:\n",
+    "            if line.startswith(\"Task ID:\"+str(num)):\n",
+    "                current_id = int(line.split(\":\")[1]) \n",
+    "                highest_id = max(highest_id, current_id)  \n",
+    "                return highest_id\n",
+    "            \n",
+    "\n",
+    "\n",
+    "def add_task():\n",
+    "    task_id = search_task_id()\n",
+    "    with open(todo,'a') as file:\n",
+    "        file.write(\"Task ID:\"+str(task_id)+\" \"+\"fourth\"+'\\n')\n",
+    "    print('task added.')\n",
+    "add_task()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1 first\\n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[78], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m         file\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(task_id)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfourth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtask added.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 19\u001b[0m \u001b[43madd_task\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[78], line 15\u001b[0m, in \u001b[0;36madd_task\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_task\u001b[39m():\n\u001b[1;32m---> 15\u001b[0m     task_id \u001b[38;5;241m=\u001b[39m \u001b[43msearch_task_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(todo,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     17\u001b[0m         file\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(task_id)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfourth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[78], line 7\u001b[0m, in \u001b[0;36msearch_task_id\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m line\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m----> 7\u001b[0m         task_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m  \n\u001b[0;32m      8\u001b[0m         highest_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(highest_id, task_id)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '1 first\\n'"
+     ]
+    }
+   ],
+   "source": [
+    "todo = 'TODO.txt'\n",
+    "def search_task_id():\n",
+    "    with open(todo, 'r') as file:\n",
+    "            lines = file.readlines()\n",
+    "            for line in lines:\n",
+    "                if line.startswith(\"Task ID:\"):\n",
+    "                    task_id = int(line.split(\":\")[1])  \n",
+    "                    highest_id = max(highest_id, task_id)  \n",
+    "    \n",
+    "    \n",
+    "            \n",
+    "\n",
+    "\n",
+    "def add_task():\n",
+    "    task_id = search_task_id()\n",
+    "    with open(todo,'a') as file:\n",
+    "        file.write(\"Task ID:\"+str(task_id)+\" \"+\"fourth\"+'\\n')\n",
+    "    print('task added.')\n",
+    "add_task()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1 first'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m         file\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(task_id)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfourth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtask added.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 18\u001b[0m \u001b[43madd_task\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[87], line 14\u001b[0m, in \u001b[0;36madd_task\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_task\u001b[39m():\n\u001b[1;32m---> 14\u001b[0m     task_id \u001b[38;5;241m=\u001b[39m \u001b[43msearch_task_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(todo,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     16\u001b[0m         file\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(task_id)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfourth\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[87], line 7\u001b[0m, in \u001b[0;36msearch_task_id\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines:\n\u001b[0;32m      6\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m line\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTask ID:\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m----> 7\u001b[0m                 task_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m  \n\u001b[0;32m      8\u001b[0m                 highest_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(highest_id, task_id)  \n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m highest_id\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '1 first'"
+     ]
+    }
+   ],
+   "source": [
+    "todo = 'TODO.txt'\n",
+    "def search_task_id():\n",
+    "    with open(todo, 'r') as file:\n",
+    "            lines = file.readlines()\n",
+    "            for line in lines:\n",
+    "                if line.startswith(\"Task ID:\"):\n",
+    "                    task_id = int(line.split(\":\")[1].strip())  \n",
+    "                    highest_id = max(highest_id, task_id)  \n",
+    "    return highest_id\n",
+    "            \n",
+    "\n",
+    "\n",
+    "def add_task():\n",
+    "    task_id = search_task_id()\n",
+    "    with open(todo,'a') as file:\n",
+    "        file.write(\"Task ID:\"+str(task_id)+\" \"+\"fourth\"+'\\n')\n",
+    "    print('task added.')\n",
+    "add_task()"
    ]
   }
  ],
